--- a/covid/COVID-Analysis.ipynb
+++ b/covid/COVID-Analysis.ipynb
@@ -15,8 +15,9 @@
     "\n",
     "I am throwing in analysis of my local target US states + the hot countries Spain, Italy, etc to compare and contrast.\n",
     "\n",
-    "Datasets are all available on github courtesy of John Hopkins, just download via:\n",
+    "I branched to do my own random analysis [COVID-Analysis-2.ipynb](COVID-Analysis-2.ipynb)\n",
     "\n",
+    "Datasets are all available on github courtesy of John Hopkins, just download via:\n",
     "-  git clone https://github.com/CSSEGISandData/COVID-19.git\n"
    ]
   },
