added county metrics

--- a/covid/COVID-Analysis-2.ipynb
+++ b/covid/COVID-Analysis-2.ipynb
@@ -11,11 +11,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I stole some of this from Brice R -- who did a nice job confirming exponential growth of virus confirmed cases.  See (https://ro-z.net/assets/covid19quickanalysis.html)\n",
+    "See original [COVID-Analysis.ipynb](COVID-Analysis.ipynb) as ref impl\n",
     "\n",
-    "I am throwing in analysis of my local target US states + the hot countries Spain, Italy, etc to compare and contrast.\n",
+    "Also see [COVID-USAfacts.ipynb](COVID-USAfacts.ipynb) - using finer grain state/county aggregated data from https://usafacts.org/visualizations/coronavirus-covid-19-spread-map/  \n",
     "\n",
-    "Datasets are all available on github courtesy of John Hopkins, just download via:\n",
+    "Datasets in this notebook courtesy of John Hopkins, just download via:\n",
     "\n",
     "-  git clone https://github.com/CSSEGISandData/COVID-19.git\n"
    ]
