cleared a few states on plots

--- a/covid/COVID-Analysis.ipynb
+++ b/covid/COVID-Analysis.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,36 +272,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Country/Region</th>\n",
+       "      <th>Japan</th>\n",
+       "      <th>US</th>\n",
+       "      <th>Italy</th>\n",
+       "      <th>Spain</th>\n",
+       "      <th>France</th>\n",
+       "      <th>Korea, South</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>2020-03-17</td>\n",
+       "      <td>878</td>\n",
+       "      <td>6421</td>\n",
+       "      <td>31506</td>\n",
+       "      <td>11748</td>\n",
+       "      <td>7699</td>\n",
+       "      <td>8320</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2020-03-18</td>\n",
+       "      <td>889</td>\n",
+       "      <td>7783</td>\n",
+       "      <td>35713</td>\n",
+       "      <td>13910</td>\n",
+       "      <td>9105</td>\n",
+       "      <td>8413</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2020-03-19</td>\n",
+       "      <td>924</td>\n",
+       "      <td>13677</td>\n",
+       "      <td>41035</td>\n",
+       "      <td>17963</td>\n",
+       "      <td>10947</td>\n",
+       "      <td>8565</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2020-03-20</td>\n",
+       "      <td>963</td>\n",
+       "      <td>19100</td>\n",
+       "      <td>47021</td>\n",
+       "      <td>20410</td>\n",
+       "      <td>12726</td>\n",
+       "      <td>8652</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2020-03-21</td>\n",
+       "      <td>1007</td>\n",
+       "      <td>25489</td>\n",
+       "      <td>53578</td>\n",
+       "      <td>25374</td>\n",
+       "      <td>14431</td>\n",
+       "      <td>8799</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "['Congo (Kinshasa)',\n",
-       " 'Kazakhstan',\n",
-       " 'Kenya',\n",
-       " 'Korea, South',\n",
-       " 'Kosovo',\n",
-       " 'Kuwait',\n",
-       " 'Kyrgyzstan',\n",
-       " 'United Kingdom']"
+       "Country/Region  Japan     US  Italy  Spain  France  Korea, South\n",
+       "2020-03-17        878   6421  31506  11748    7699          8320\n",
+       "2020-03-18        889   7783  35713  13910    9105          8413\n",
+       "2020-03-19        924  13677  41035  17963   10947          8565\n",
+       "2020-03-20        963  19100  47021  20410   12726          8652\n",
+       "2020-03-21       1007  25489  53578  25374   14431          8799"
       ]
      },
-     "execution_count": 4,
      "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[x for x in confirmed.columns if 'K' in x]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
+     "output_type": "display_data"
+    },
     {
      "data": {
       "text/html": [
@@ -390,14 +454,15 @@
        "2020-03-21         35  307   4825   1375     562           102"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "countries = [ 'Japan', 'US', 'Italy', 'Spain','France', 'Korea, South' ]\n",
-    "deaths[ countries ].tail()\n"
+    "display(confirmed[countries].tail())\n",
+    "deaths[countries].tail()\n"
    ]
   },
   {
