sunday morning post

--- a/covid/COVID-global-working.ipynb
+++ b/covid/COVID-global-working.ipynb
@@ -2557,13 +2557,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 102,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(262, 4)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country Name</th>\n",
+       "      <th>Country Code</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>56</td>\n",
+       "      <td>Arab World</td>\n",
+       "      <td>ARB</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>4.064527e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>113</td>\n",
+       "      <td>Caribbean small states</td>\n",
+       "      <td>CSS</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>7.245472e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>170</td>\n",
+       "      <td>Central Europe and the Baltics</td>\n",
+       "      <td>CEB</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>1.029741e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>227</td>\n",
+       "      <td>Early-demographic dividend</td>\n",
+       "      <td>EAR</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>3.170542e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>284</td>\n",
+       "      <td>East Asia &amp; Pacific</td>\n",
+       "      <td>EAS</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>2.296786e+09</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       Country Name Country Code  Year         Value\n",
+       "56                       Arab World          ARB  2016  4.064527e+08\n",
+       "113          Caribbean small states          CSS  2016  7.245472e+06\n",
+       "170  Central Europe and the Baltics          CEB  2016  1.029741e+08\n",
+       "227      Early-demographic dividend          EAR  2016  3.170542e+09\n",
+       "284             East Asia & Pacific          EAS  2016  2.296786e+09"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(262, 4)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# GLobal Population \n",
     "# https://github.com/datasets/population/blob/master/data/population.csv\n",
-    "    "
+    "\n",
+    "df_gpop = pd.read_csv('https://raw.githubusercontent.com/datasets/population/master/data/population.csv')\n",
+    "df_gpop_2016 = df_gpop[df_gpop['Year'] == 2016]\n",
+    "\n",
+    "display(df_gpop_2016.shape, df_gpop_2016.head())  #262 countries\n",
+    "\n",
+    "df_gmerged = pd.merge(dfc)\n",
+    "\n",
+    "\n"
    ]
   },
   {
