--- a/covid/COVID-global-clustering.ipynb
+++ b/covid/COVID-global-clustering.ipynb
@@ -12,6 +12,7 @@
     "\n",
     "https://raw.githubusercontent.com/CSSEGISandData/COVID-19/master/csse_covid_19_data/csse_covid_19_time_series/time_series_covid19_confirmed_global.csv\n",
     "\n",
+    "\n",
     "## Clustering thoughts\n",
     "- Take case + death counts\n",
     "- Trending pattern (?  what is a good single value metric.. rolling 3 day or some momentum value?)\n",
@@ -24,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -919,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1003,98 +1004,9 @@
     },
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>2020-04-05</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Country/Region</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>US</td>\n",
-       "      <td>337072</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>Spain</td>\n",
-       "      <td>131646</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>Italy</td>\n",
-       "      <td>128948</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>Germany</td>\n",
-       "      <td>100123</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>France</td>\n",
-       "      <td>93773</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>Malawi</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>Burundi</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>Papua New Guinea</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>South Sudan</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>Timor-Leste</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>183 rows × 1 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                  2020-04-05\n",
-       "Country/Region              \n",
-       "US                    337072\n",
-       "Spain                 131646\n",
-       "Italy                 128948\n",
-       "Germany               100123\n",
-       "France                 93773\n",
-       "...                      ...\n",
-       "Malawi                     4\n",
-       "Burundi                    3\n",
-       "Papua New Guinea           1\n",
-       "South Sudan                1\n",
-       "Timor-Leste                1\n",
-       "\n",
-       "[183 rows x 1 columns]"
+       "2020-04-05    183\n",
+       "dtype: int64"
       ]
      },
      "metadata": {},
@@ -1122,126 +1034,74 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Country/Region</th>\n",
-       "      <th>2020-04-05 00:00:00</th>\n",
+       "      <th>Deaths</th>\n",
+       "      <th>Cases</th>\n",
        "      <th>Country Code</th>\n",
        "      <th>Year</th>\n",
-       "      <th>Value</th>\n",
+       "      <th>Pop</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>Spain</td>\n",
-       "      <td>131646</td>\n",
-       "      <td>ESP</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>4.644396e+07</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
        "      <td>Italy</td>\n",
+       "      <td>15887</td>\n",
        "      <td>128948</td>\n",
        "      <td>ITA</td>\n",
        "      <td>2016</td>\n",
        "      <td>6.060059e+07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>Germany</td>\n",
-       "      <td>100123</td>\n",
-       "      <td>DEU</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Spain</td>\n",
+       "      <td>12641</td>\n",
+       "      <td>131646</td>\n",
+       "      <td>ESP</td>\n",
        "      <td>2016</td>\n",
-       "      <td>8.266768e+07</td>\n",
+       "      <td>4.644396e+07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
+       "      <td>2</td>\n",
        "      <td>France</td>\n",
+       "      <td>8093</td>\n",
        "      <td>93773</td>\n",
        "      <td>FRA</td>\n",
        "      <td>2016</td>\n",
        "      <td>6.689611e+07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>4943</td>\n",
+       "      <td>48436</td>\n",
+       "      <td>GBR</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>6.563724e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <td>4</td>\n",
        "      <td>China</td>\n",
+       "      <td>3333</td>\n",
        "      <td>82602</td>\n",
        "      <td>CHN</td>\n",
        "      <td>2016</td>\n",
        "      <td>1.378665e+09</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>150</td>\n",
-       "      <td>Malawi</td>\n",
-       "      <td>4</td>\n",
-       "      <td>MWI</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>1.809158e+07</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>151</td>\n",
-       "      <td>Burundi</td>\n",
-       "      <td>3</td>\n",
-       "      <td>BDI</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>1.052412e+07</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>152</td>\n",
-       "      <td>Papua New Guinea</td>\n",
-       "      <td>1</td>\n",
-       "      <td>PNG</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>8.084991e+06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>153</td>\n",
-       "      <td>South Sudan</td>\n",
-       "      <td>1</td>\n",
-       "      <td>SSD</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>1.223073e+07</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>154</td>\n",
-       "      <td>Timor-Leste</td>\n",
-       "      <td>1</td>\n",
-       "      <td>TLS</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>1.268671e+06</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>155 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       Country/Region  2020-04-05 00:00:00 Country Code  Year         Value\n",
-       "0               Spain               131646          ESP  2016  4.644396e+07\n",
-       "1               Italy               128948          ITA  2016  6.060059e+07\n",
-       "2             Germany               100123          DEU  2016  8.266768e+07\n",
-       "3              France                93773          FRA  2016  6.689611e+07\n",
-       "4               China                82602          CHN  2016  1.378665e+09\n",
-       "..                ...                  ...          ...   ...           ...\n",
-       "150            Malawi                    4          MWI  2016  1.809158e+07\n",
-       "151           Burundi                    3          BDI  2016  1.052412e+07\n",
-       "152  Papua New Guinea                    1          PNG  2016  8.084991e+06\n",
-       "153       South Sudan                    1          SSD  2016  1.223073e+07\n",
-       "154       Timor-Leste                    1          TLS  2016  1.268671e+06\n",
-       "\n",
-       "[155 rows x 5 columns]"
+       "   Country/Region  Deaths   Cases Country Code  Year           Pop\n",
+       "0           Italy   15887  128948          ITA  2016  6.060059e+07\n",
+       "1           Spain   12641  131646          ESP  2016  4.644396e+07\n",
+       "2          France    8093   93773          FRA  2016  6.689611e+07\n",
+       "3  United Kingdom    4943   48436          GBR  2016  6.563724e+07\n",
+       "4           China    3333   82602          CHN  2016  1.378665e+09"
       ]
      },
-     "execution_count": 222,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -1252,19 +1112,252 @@
     "df_gpop_2016 = df_gpop[df_gpop['Year'] == 2016]\n",
     "df_gpop_2016 = df_gpop_2016.rename(columns={'Country Name': 'Country/Region'})\n",
     "\n",
-    "display(df_gpop_2016.head(), dfc_g.tail(1).transpose())  #262 countries\n",
+    "display(df_gpop_2016.head(), dfc_g.tail(1).transpose().count())  #262 countries / n countries\n",
+    "df_gmerged = pd.merge(left=dfc_g.tail(1).transpose(), right=df_gpop_2016, on='Country/Region').rename(columns={'Value':'Pop'})\n",
+    "df_gmerged = df_gmerged.rename(columns={ df_gmerged.columns[1]: \"Cases\" })\n",
     "\n",
-    "df_gmerged = pd.merge(left=dfc_g.tail(1).transpose(), right=df_gpop_2016, on='Country/Region')\n",
-    "\n",
-    "df_gmerged\n"
+    "df_gmerged = pd.merge(left=dfd_g.tail(1).transpose(), right=df_gmerged, on='Country/Region').rename(columns={'Value':'Pop'})\n",
+    "df_gmerged = df_gmerged.rename(columns={ df_gmerged.columns[1]: \"Deaths\" })\n",
+    "       \n",
+    "display(df_gmerged.head())\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(155, 6)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(264, 3)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(155, 8)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country Name</th>\n",
+       "      <th>Country Code</th>\n",
+       "      <th>popdensity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>Aruba</td>\n",
+       "      <td>ABW</td>\n",
+       "      <td>588.027778</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>56.937760</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>Angola</td>\n",
+       "      <td>AGO</td>\n",
+       "      <td>24.713052</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>Albania</td>\n",
+       "      <td>ALB</td>\n",
+       "      <td>104.612263</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>Andorra</td>\n",
+       "      <td>AND</td>\n",
+       "      <td>163.842553</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Country Name Country Code  popdensity\n",
+       "0        Aruba          ABW  588.027778\n",
+       "1  Afghanistan          AFG   56.937760\n",
+       "2       Angola          AGO   24.713052\n",
+       "3      Albania          ALB  104.612263\n",
+       "4      Andorra          AND  163.842553"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country/Region</th>\n",
+       "      <th>Deaths</th>\n",
+       "      <th>Cases</th>\n",
+       "      <th>Country Code</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Pop</th>\n",
+       "      <th>Country Name</th>\n",
+       "      <th>popdensity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>Italy</td>\n",
+       "      <td>15887</td>\n",
+       "      <td>128948</td>\n",
+       "      <td>ITA</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>6.060059e+07</td>\n",
+       "      <td>Italy</td>\n",
+       "      <td>205.450748</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>Spain</td>\n",
+       "      <td>12641</td>\n",
+       "      <td>131646</td>\n",
+       "      <td>ESP</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>4.644396e+07</td>\n",
+       "      <td>Spain</td>\n",
+       "      <td>93.529058</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>France</td>\n",
+       "      <td>8093</td>\n",
+       "      <td>93773</td>\n",
+       "      <td>FRA</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>6.689611e+07</td>\n",
+       "      <td>France</td>\n",
+       "      <td>122.338396</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>4943</td>\n",
+       "      <td>48436</td>\n",
+       "      <td>GBR</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>6.563724e+07</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>274.827392</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>China</td>\n",
+       "      <td>3333</td>\n",
+       "      <td>82602</td>\n",
+       "      <td>CHN</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>1.378665e+09</td>\n",
+       "      <td>China</td>\n",
+       "      <td>148.348833</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Country/Region  Deaths   Cases Country Code  Year           Pop  \\\n",
+       "0           Italy   15887  128948          ITA  2016  6.060059e+07   \n",
+       "1           Spain   12641  131646          ESP  2016  4.644396e+07   \n",
+       "2          France    8093   93773          FRA  2016  6.689611e+07   \n",
+       "3  United Kingdom    4943   48436          GBR  2016  6.563724e+07   \n",
+       "4           China    3333   82602          CHN  2016  1.378665e+09   \n",
+       "\n",
+       "     Country Name  popdensity  \n",
+       "0           Italy  205.450748  \n",
+       "1           Spain   93.529058  \n",
+       "2          France  122.338396  \n",
+       "3  United Kingdom  274.827392  \n",
+       "4           China  148.348833  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# population density source\n",
+    "# http://api.worldbank.org/v2/en/indicator/EN.POP.DNST?downloadformat=csv   \n",
+    "from zipfile import ZipFile\n",
+    "import requests, zipfile, io\n",
+    "\n",
+    "import urllib.request\n",
+    "urllib.request.urlretrieve('http://api.worldbank.org/v2/en/indicator/EN.POP.DNST?downloadformat=csv', \"GDP.zip\")\n",
+    "import zipfile\n",
+    "compressed_file = zipfile.ZipFile('GDP.zip') \n",
+    "csv_file = compressed_file.open('API_EN.POP.DNST_DS2_en_csv_v2_887474.csv')  # pattern match how?\n",
+    "popdensity = pd.read_csv(csv_file, header=2)\n",
+    "popdensity = pd.concat([popdensity.iloc[:,0:2], popdensity['2018']], axis=1).rename(columns={'2018':'popdensity'})\n",
+    "\n",
+    "df_gmerged2 = pd.merge(left=df_gmerged, right=popdensity, on='Country Code', how='left')\n",
+    "\n",
+    "display(df_gmerged.shape, popdensity.shape, df_gmerged2.shape)\n",
+    "display(popdensity.head(), df_gmerged2.head())"
+   ]
   }
  ],
  "metadata": {
