--- a/covid/COVID-global-working.ipynb
+++ b/covid/COVID-global-working.ipynb
@@ -8,12 +8,14 @@
     "\n",
     "Do the same using Global data from John Hopkins University\n",
     "\n",
+    "https://github.com/CSSEGISandData/COVID-19   \n",
+    "\n",
     "https://raw.githubusercontent.com/CSSEGISandData/COVID-19/master/csse_covid_19_data/csse_covid_19_time_series/time_series_covid19_confirmed_global.csv\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [
     {
@@ -894,7 +896,7 @@
     "dfd_g = dfd_g.transpose().tail(40)  # last 40 days ?\n",
     "dfd_g.index = pd.to_datetime(dfd_g.index) \n",
     "display('deaths',dfd_g.tail())\n",
-    "display('chg in deaths',dfd_g.tail().diff(axis=0))\n",
+    "display('chg in deaths',dfd_g.tail().diff(axis=1))\n",
     "\n",
     "#display('details of', dfd_g['Sudan'].tail(15), dfc_g['Sudan'].tail(15))\n"
    ]
@@ -2551,7 +2553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
@@ -3184,18 +3186,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(262, 4)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "data": {
       "text/html": [
@@ -3217,7 +3210,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Country Name</th>\n",
+       "      <th>Country/Region</th>\n",
        "      <th>Country Code</th>\n",
        "      <th>Year</th>\n",
        "      <th>Value</th>\n",
@@ -3264,7 +3257,7 @@
        "</div>"
       ],
       "text/plain": [
-       "                       Country Name Country Code  Year         Value\n",
+       "                     Country/Region Country Code  Year         Value\n",
        "56                       Arab World          ARB  2016  4.064527e+08\n",
        "113          Caribbean small states          CSS  2016  7.245472e+06\n",
        "170  Central Europe and the Baltics          CEB  2016  1.029741e+08\n",
@@ -3276,15 +3269,246 @@
      "output_type": "display_data"
     },
     {
-     "ename": "NameError",
-     "evalue": "name 'dfc' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-202-3d8a790301e4>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[0mdisplay\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf_gpop_2016\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdf_gpop_2016\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m  \u001b[1;31m#262 countries\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m \u001b[0mdf_gmerged\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmerge\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdfc\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     10\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'dfc' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>2020-04-05</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Country/Region</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>US</td>\n",
+       "      <td>337072</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Spain</td>\n",
+       "      <td>131646</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Italy</td>\n",
+       "      <td>128948</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Germany</td>\n",
+       "      <td>100123</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>France</td>\n",
+       "      <td>93773</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Malawi</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Burundi</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Papua New Guinea</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>South Sudan</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Timor-Leste</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>183 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  2020-04-05\n",
+       "Country/Region              \n",
+       "US                    337072\n",
+       "Spain                 131646\n",
+       "Italy                 128948\n",
+       "Germany               100123\n",
+       "France                 93773\n",
+       "...                      ...\n",
+       "Malawi                     4\n",
+       "Burundi                    3\n",
+       "Papua New Guinea           1\n",
+       "South Sudan                1\n",
+       "Timor-Leste                1\n",
+       "\n",
+       "[183 rows x 1 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country/Region</th>\n",
+       "      <th>2020-04-05 00:00:00</th>\n",
+       "      <th>Country Code</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>Spain</td>\n",
+       "      <td>131646</td>\n",
+       "      <td>ESP</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>4.644396e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>Italy</td>\n",
+       "      <td>128948</td>\n",
+       "      <td>ITA</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>6.060059e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>100123</td>\n",
+       "      <td>DEU</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>8.266768e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>France</td>\n",
+       "      <td>93773</td>\n",
+       "      <td>FRA</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>6.689611e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>China</td>\n",
+       "      <td>82602</td>\n",
+       "      <td>CHN</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>1.378665e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>150</td>\n",
+       "      <td>Malawi</td>\n",
+       "      <td>4</td>\n",
+       "      <td>MWI</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>1.809158e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>151</td>\n",
+       "      <td>Burundi</td>\n",
+       "      <td>3</td>\n",
+       "      <td>BDI</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>1.052412e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>152</td>\n",
+       "      <td>Papua New Guinea</td>\n",
+       "      <td>1</td>\n",
+       "      <td>PNG</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>8.084991e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>153</td>\n",
+       "      <td>South Sudan</td>\n",
+       "      <td>1</td>\n",
+       "      <td>SSD</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>1.223073e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>154</td>\n",
+       "      <td>Timor-Leste</td>\n",
+       "      <td>1</td>\n",
+       "      <td>TLS</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>1.268671e+06</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>155 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Country/Region  2020-04-05 00:00:00 Country Code  Year         Value\n",
+       "0               Spain               131646          ESP  2016  4.644396e+07\n",
+       "1               Italy               128948          ITA  2016  6.060059e+07\n",
+       "2             Germany               100123          DEU  2016  8.266768e+07\n",
+       "3              France                93773          FRA  2016  6.689611e+07\n",
+       "4               China                82602          CHN  2016  1.378665e+09\n",
+       "..                ...                  ...          ...   ...           ...\n",
+       "150            Malawi                    4          MWI  2016  1.809158e+07\n",
+       "151           Burundi                    3          BDI  2016  1.052412e+07\n",
+       "152  Papua New Guinea                    1          PNG  2016  8.084991e+06\n",
+       "153       South Sudan                    1          SSD  2016  1.223073e+07\n",
+       "154       Timor-Leste                    1          TLS  2016  1.268671e+06\n",
+       "\n",
+       "[155 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 222,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -3293,12 +3517,13 @@
     "\n",
     "df_gpop = pd.read_csv('https://raw.githubusercontent.com/datasets/population/master/data/population.csv')\n",
     "df_gpop_2016 = df_gpop[df_gpop['Year'] == 2016]\n",
+    "df_gpop_2016 = df_gpop_2016.rename(columns={'Country Name': 'Country/Region'})\n",
     "\n",
-    "display(df_gpop_2016.shape, df_gpop_2016.head())  #262 countries\n",
+    "display(df_gpop_2016.head(), dfc_g.tail(1).transpose())  #262 countries\n",
     "\n",
-    "df_gmerged = pd.merge(dfc)\n",
+    "df_gmerged = pd.merge(left=dfc_g.tail(1).transpose(), right=df_gpop_2016, on='Country/Region')\n",
     "\n",
-    "\n"
+    "df_gmerged\n"
    ]
   },
   {
