--- a/covid/COVID-global-clustering.ipynb
+++ b/covid/COVID-global-clustering.ipynb
@@ -1496,7 +1496,7 @@
     "# unemployment http://api.worldbank.org/v2/en/indicator/SL.UEM.TOTL.ZS?downloadformat=csv\n",
     "# urban pop http://api.worldbank.org/v2/en/indicator/SP.URB.TOTL.IN.ZS?downloadformat=csv\n",
     "\n",
-    "\n"
+    "# need to get the last column w/ data tsince its very sparse\n"
    ]
   },
   {
