NY 4/7 eve graph

--- a/covid/COVID-global-clustering.ipynb
+++ b/covid/COVID-global-clustering.ipynb
@@ -1483,7 +1483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1496,6 +1496,8 @@
     "# unemployment http://api.worldbank.org/v2/en/indicator/SL.UEM.TOTL.ZS?downloadformat=csv\n",
     "# urban pop http://api.worldbank.org/v2/en/indicator/SP.URB.TOTL.IN.ZS?downloadformat=csv\n",
     "\n",
+    "# add weather data next -- need global by country (aka us fips: ftp://ftp.ncdc.noaa.gov/pub/data/cirs/climdiv/)\n",
+    "    \n",
     "# need to get the last column w/ data tsince its very sparse\n"
    ]
   },
