--- a/covid/COVID-global-clustering.ipynb
+++ b/covid/COVID-global-clustering.ipynb
@@ -1487,6 +1487,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#  -- all available https://data.worldbank.org/indicator\n",
     "# unemployment data http://api.worldbank.org/v2/en/indicator/SL.UEM.TOTL.ZS?downloadformat=csv\n",
     "# hospital beds http://api.worldbank.org/v2/en/indicator/SH.MED.BEDS.ZS?downloadformat=csv\n",
     "# air flights http://api.worldbank.org/v2/en/indicator/IS.AIR.DPRT?downloadformat=csv\n",
@@ -1496,9 +1497,283 @@
     "# unemployment http://api.worldbank.org/v2/en/indicator/SL.UEM.TOTL.ZS?downloadformat=csv\n",
     "# urban pop http://api.worldbank.org/v2/en/indicator/SP.URB.TOTL.IN.ZS?downloadformat=csv\n",
     "\n",
-    "# add weather data next -- need global by country (aka us fips: ftp://ftp.ncdc.noaa.gov/pub/data/cirs/climdiv/)\n",
-    "    \n",
-    "# need to get the last column w/ data tsince its very sparse\n"
+    "# need to get the last column w/ data tsince its very sparse\n",
+    "s\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>code</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>10</th>\n",
+       "      <th>11</th>\n",
+       "      <th>12</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>01001021896</td>\n",
+       "      <td>44.30</td>\n",
+       "      <td>49.00</td>\n",
+       "      <td>54.00</td>\n",
+       "      <td>69.30</td>\n",
+       "      <td>76.80</td>\n",
+       "      <td>78.00</td>\n",
+       "      <td>81.70</td>\n",
+       "      <td>83.10</td>\n",
+       "      <td>77.90</td>\n",
+       "      <td>64.70</td>\n",
+       "      <td>58.00</td>\n",
+       "      <td>47.30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>01001021897</td>\n",
+       "      <td>43.70</td>\n",
+       "      <td>52.30</td>\n",
+       "      <td>61.30</td>\n",
+       "      <td>63.00</td>\n",
+       "      <td>70.00</td>\n",
+       "      <td>82.40</td>\n",
+       "      <td>82.40</td>\n",
+       "      <td>79.60</td>\n",
+       "      <td>76.60</td>\n",
+       "      <td>67.40</td>\n",
+       "      <td>54.90</td>\n",
+       "      <td>48.20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>01001021898</td>\n",
+       "      <td>50.10</td>\n",
+       "      <td>46.80</td>\n",
+       "      <td>60.10</td>\n",
+       "      <td>59.60</td>\n",
+       "      <td>75.00</td>\n",
+       "      <td>81.50</td>\n",
+       "      <td>80.80</td>\n",
+       "      <td>79.20</td>\n",
+       "      <td>76.20</td>\n",
+       "      <td>62.10</td>\n",
+       "      <td>50.20</td>\n",
+       "      <td>44.20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>01001021899</td>\n",
+       "      <td>44.60</td>\n",
+       "      <td>41.50</td>\n",
+       "      <td>56.60</td>\n",
+       "      <td>62.30</td>\n",
+       "      <td>76.70</td>\n",
+       "      <td>81.00</td>\n",
+       "      <td>81.00</td>\n",
+       "      <td>81.50</td>\n",
+       "      <td>74.30</td>\n",
+       "      <td>66.60</td>\n",
+       "      <td>55.70</td>\n",
+       "      <td>45.30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>01001021900</td>\n",
+       "      <td>43.90</td>\n",
+       "      <td>45.10</td>\n",
+       "      <td>53.80</td>\n",
+       "      <td>65.30</td>\n",
+       "      <td>71.70</td>\n",
+       "      <td>76.40</td>\n",
+       "      <td>80.60</td>\n",
+       "      <td>81.50</td>\n",
+       "      <td>78.10</td>\n",
+       "      <td>69.30</td>\n",
+       "      <td>56.10</td>\n",
+       "      <td>48.30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>394260</td>\n",
+       "      <td>50290022016</td>\n",
+       "      <td>9.90</td>\n",
+       "      <td>10.40</td>\n",
+       "      <td>14.90</td>\n",
+       "      <td>33.20</td>\n",
+       "      <td>47.40</td>\n",
+       "      <td>55.60</td>\n",
+       "      <td>58.70</td>\n",
+       "      <td>55.50</td>\n",
+       "      <td>41.40</td>\n",
+       "      <td>24.70</td>\n",
+       "      <td>4.40</td>\n",
+       "      <td>-2.20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>394261</td>\n",
+       "      <td>50290022017</td>\n",
+       "      <td>-4.10</td>\n",
+       "      <td>0.70</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>30.00</td>\n",
+       "      <td>45.30</td>\n",
+       "      <td>56.80</td>\n",
+       "      <td>61.60</td>\n",
+       "      <td>52.10</td>\n",
+       "      <td>43.10</td>\n",
+       "      <td>27.50</td>\n",
+       "      <td>8.10</td>\n",
+       "      <td>14.20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>394262</td>\n",
+       "      <td>50290022018</td>\n",
+       "      <td>-2.20</td>\n",
+       "      <td>6.10</td>\n",
+       "      <td>15.10</td>\n",
+       "      <td>25.60</td>\n",
+       "      <td>43.60</td>\n",
+       "      <td>54.60</td>\n",
+       "      <td>60.00</td>\n",
+       "      <td>51.00</td>\n",
+       "      <td>43.60</td>\n",
+       "      <td>30.40</td>\n",
+       "      <td>11.70</td>\n",
+       "      <td>2.70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>394263</td>\n",
+       "      <td>50290022019</td>\n",
+       "      <td>-1.70</td>\n",
+       "      <td>9.50</td>\n",
+       "      <td>25.10</td>\n",
+       "      <td>29.20</td>\n",
+       "      <td>47.00</td>\n",
+       "      <td>59.30</td>\n",
+       "      <td>61.90</td>\n",
+       "      <td>51.80</td>\n",
+       "      <td>43.90</td>\n",
+       "      <td>27.50</td>\n",
+       "      <td>10.60</td>\n",
+       "      <td>-4.90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>394264</td>\n",
+       "      <td>50290022020</td>\n",
+       "      <td>-16.00</td>\n",
+       "      <td>-7.60</td>\n",
+       "      <td>7.90</td>\n",
+       "      <td>-99.90</td>\n",
+       "      <td>-99.90</td>\n",
+       "      <td>-99.90</td>\n",
+       "      <td>-99.90</td>\n",
+       "      <td>-99.90</td>\n",
+       "      <td>-99.90</td>\n",
+       "      <td>-99.90</td>\n",
+       "      <td>-99.90</td>\n",
+       "      <td>-99.90</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>394265 rows × 13 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               code       1      2      3       4       5       6       7  \\\n",
+       "0       01001021896   44.30  49.00  54.00   69.30   76.80   78.00   81.70   \n",
+       "1       01001021897   43.70  52.30  61.30   63.00   70.00   82.40   82.40   \n",
+       "2       01001021898   50.10  46.80  60.10   59.60   75.00   81.50   80.80   \n",
+       "3       01001021899   44.60  41.50  56.60   62.30   76.70   81.00   81.00   \n",
+       "4       01001021900   43.90  45.10  53.80   65.30   71.70   76.40   80.60   \n",
+       "...             ...     ...    ...    ...     ...     ...     ...     ...   \n",
+       "394260  50290022016    9.90  10.40  14.90   33.20   47.40   55.60   58.70   \n",
+       "394261  50290022017   -4.10   0.70   0.20   30.00   45.30   56.80   61.60   \n",
+       "394262  50290022018   -2.20   6.10  15.10   25.60   43.60   54.60   60.00   \n",
+       "394263  50290022019   -1.70   9.50  25.10   29.20   47.00   59.30   61.90   \n",
+       "394264  50290022020  -16.00  -7.60   7.90  -99.90  -99.90  -99.90  -99.90   \n",
+       "\n",
+       "             8       9      10      11      12  \n",
+       "0        83.10   77.90   64.70   58.00   47.30  \n",
+       "1        79.60   76.60   67.40   54.90   48.20  \n",
+       "2        79.20   76.20   62.10   50.20   44.20  \n",
+       "3        81.50   74.30   66.60   55.70   45.30  \n",
+       "4        81.50   78.10   69.30   56.10   48.30  \n",
+       "...        ...     ...     ...     ...     ...  \n",
+       "394260   55.50   41.40   24.70    4.40   -2.20  \n",
+       "394261   52.10   43.10   27.50    8.10   14.20  \n",
+       "394262   51.00   43.60   30.40   11.70    2.70  \n",
+       "394263   51.80   43.90   27.50   10.60   -4.90  \n",
+       "394264  -99.90  -99.90  -99.90  -99.90  -99.90  \n",
+       "\n",
+       "[394265 rows x 13 columns]"
+      ]
+     },
+     "execution_count": 158,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Pop Density vs Case counts"
    ]
   },
   {
